# Open-Apex1

./: .env.example  .gitignore  .prettierignore  Apex2.md  README.md  bunfig.toml  eslint.config.js  open-apex-build-plan.md  package.json  tsconfig.base.json  tsconfig.json
apps/cli/: package.json
apps/cli/src/: adapter-factory.ts  args.ts  autonomous.ts  bin.ts  chat.ts  commands.ts  exploratory-runner.ts  help.ts  index.ts
apps/cli/test/: args.test.ts  autonomous.test.ts  chat.test.ts  commands.test.ts
apps/harbor-installed-agent/: pyproject.toml
apps/harbor-installed-agent/open_apex_agent/: __init__.py  agent.py  install.py  install_probe.py
apps/harbor-installed-agent/tests/: test_agent.py  test_install.py  test_populate_context.py
apps/landlock-helper/: Cargo.toml  README.md
apps/landlock-helper/src/: main.rs
