[project]
name = "open-apex-harbor-agent"
version = "0.0.1"
description = "Open-Apex Harbor installed-agent wrapper. See §3.4.7 of the build plan."
requires-python = ">=3.11"
dependencies = [
    # Harbor's BaseInstalledAgent + ATIF Pydantic models.
    "harbor>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_apex_agent"]
